# sentinel

./: .gitignore  agents.md  apex_scope_doc.md  architecture_overview.md  bootstrap.md  button_id_and_scope.md  codebase_map.md  data_contracts.md  extraction_algo_refinement.md  generation_algo_refinement.md  hard_keys.md  invariants.md  mission.md  project_audit.md  pyproject.toml  rti_scope_doc.md  runbook.md  scope.md  sentinel_patch.tar  testing_strategy.md  updated_testing_with_scope.md  viewport_investigation_temp.md
.tmp_apex_env/: pyvenv.cfg
CodeProduction/: CodeProduction_prompt_pack.md  agents.md
Initial Testing/: apex_system_driver_events_extraction_standalone.md
Project Structure/: AGENTS.md  Carlos OBryans v6.3.1 (tag cleanup)_project_data.json  Carlos OBryans v6.3.1 (tag cleanup)_project_data__page-2-lights.html  __tmp_test_system_manager.apex  carlos_obryans_v6_2_cable_box_1_proper_page.html  carlos_obryans_v6_2_caseta_driver_sound_mock.html  carlos_obryans_v6_3_1_lights_proper_page.html  home_global_mock.html  project_structure.md  project_structure_resolving_methods.md  project_structure_user_facing_Carlos-OBryans-v6.2-Caseta-Driver.json  project_structure_user_facing_TEST-System-Manager-v11.3.json  temp
archives/: generation_legacy_per_page_html.md
deployment/: README.md  cleanup_post_run.ps1  deploy_from_head.ps1  verify_deploy_hash.py
devtools/: bootstrap_tmp_apex_env.py  compare_project_data_json.py  dash_list_probe_report.json  playwright_shell_hard_key_proof.py  print_hard_key_slot_walk_order.py  probe_apex_list_line_height.py  (+13 more)
(+198 files in other folders)
