[project]
name = "sentinel"
version = "0.1.0"
description = "Sentinel commissioning and testing server"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pg8000>=1.31",
]

[project.optional-dependencies]
dev = [
  "playwright>=1.40",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
